fix: adjust font size of recipe title for better readability

--- a/src/theme/RecipesCard.css
+++ b/src/theme/RecipesCard.css
@@ -19,7 +19,7 @@
 
 .recipe-title {
   text-align: left;
-  font-size: 1.5rem;
+  font-size: 1.10rem;
   /* color: black; */
 }
 
